--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,22 @@
 {
     "version": "0.2.0",
     "configurations": [
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Node Launch",
+        "program": "${workspaceFolder}/app.js",
+        "skipFiles": [
+            "<node_internals>/**"
+        ]
+    },
+        {
+            "name": "Launch Chrome",
+            "request": "launch",
+            "type": "pwa-chrome",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}"
+        },
         {
             "name": "Python: 当前文件",
             "type": "python",
