--- a/C++/DataVisualization/DataVisual/DataVisual/DataVisual.vcxproj.filters
+++ b/C++/DataVisualization/DataVisual/DataVisual/DataVisual.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="chainDraw.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="functionDraw.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
