--- a/C++/MPEforVS2019/MPE/MPE/MPE.vcxproj
+++ b/C++/MPEforVS2019/MPE/MPE/MPE.vcxproj
@@ -146,7 +146,7 @@
     <ClInclude Include="smooth.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="majorProcess.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
