--- a/C++/MPEforVS2019/MPE/MPE/MPE.vcxproj.filters
+++ b/C++/MPEforVS2019/MPE/MPE/MPE.vcxproj.filters
@@ -15,19 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="expr.h">
+    <ClInclude Include="functionDraw.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="functionDraw.h">
+    <ClInclude Include="linearAnalysis.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="linearAnalysis.h">
+    <ClInclude Include="smooth.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="message.h">
+    <ClInclude Include="message.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="smooth.h">
+    <ClInclude Include="expr.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
